--- a/hnCommentWatcher.css
+++ b/hnCommentWatcher.css
@@ -1,13 +1,13 @@
 
 
 .hncNew {
-	background-color: #86C444;
-	border-radius: 5px;
-	padding: 15px;
+	background-color: #86C444 !important;
+	border-radius: 5px !important;
+	padding: 15px !important;
 }
 
 .hncNewish {
-	background-color: #D0EDAF;
-	border-radius: 5px;
-	padding: 15px;
+	background-color: #D0EDAF !important;
+	border-radius: 5px !important;
+	padding: 15px !important;
 }
