added body id and OP styling css

--- a/hnCommentWatcher.css
+++ b/hnCommentWatcher.css
@@ -1,13 +1,20 @@
 
 
-.hncNew {
+#hnCW .hncNew {
 	background-color: #86C444 !important;
 	border-radius: 5px !important;
 	padding: 15px !important;
 }
 
-.hncNewish {
+#hnCW .hncNewish {
 	background-color: #D0EDAF !important;
 	border-radius: 5px !important;
 	padding: 15px !important;
+}
+
+#hnCW .hncOP {
+	background-color: #ff6600 !important;
+    border-radius: 15px 15px 15px 15px !important;
+    color: #FFFFFF !important;
+    padding: 5px 10px !important;
 }
