tweaked css selector for OP

--- a/hnCommentWatcher.css
+++ b/hnCommentWatcher.css
@@ -12,7 +12,7 @@
 	padding: 15px !important;
 }
 
-#hnCW .hncOP {
+#hnCW .hncOP .comhead {
 	background-color: #ff6600 !important;
     border-radius: 15px 15px 15px 15px !important;
     color: #FFFFFF !important;
