--- a/hnCommentWatcher.css
+++ b/hnCommentWatcher.css
@@ -16,3 +16,10 @@
     color: #FFFFFF !important;
     padding: 5px 10px !important;
 }
+#hnCW .loading {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 999999;
+	background-color: #000;
+}
